# AoC-2018-cpp

./: .gitignore  CMakeLists.txt  README.md  launch.bat
src/: Challenge.cpp  Challenge.h  Utils.cpp  Utils.h  aoc.cpp
src/day1/: Day1.cpp  Day1.h
